{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 23,
  "lineage": "580ded97-a53f-a3d0-34c2-10d0e3f536d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bestien",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bac6fc47ad07c5f5",
            "arn": "arn:aws:ec2:us-west-2:174871937336:instance/i-05c20a2354a951e76",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c20a2354a951e76",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-053b171f660e34663",
            "private_dns": "ip-10-0-12-232.us-west-2.compute.internal",
            "private_ip": "10.0.12.232",
            "public_ip": "35.162.189.254",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07f22c8d263649cc1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07240d022208b2100",
            "tags": {
              "Name": "bestien"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f3f34e403103841"
            ]
          },
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public_subnet2",
            "tls_private_key.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bac6fc47ad07c5f5",
            "arn": "arn:aws:ec2:us-west-2:174871937336:instance/i-0247c696bf77e4b29",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0247c696bf77e4b29",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dc438d7431289507",
            "private_dns": "ip-10-0-1-121.us-west-2.compute.internal",
            "private_ip": "10.0.1.121",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0cd82744bbc27fc13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fc83db438187b7e",
            "tags": {
              "Name": "proxy1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f3f34e403103841"
            ]
          },
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.ssh-allowed",
            "aws_subnet.private_subnet1",
            "tls_private_key.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "proxy2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bac6fc47ad07c5f5",
            "arn": "arn:aws:ec2:us-west-2:174871937336:instance/i-016e2b53818f71b8d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016e2b53818f71b8d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-058193d9f20db0352",
            "private_dns": "ip-10-0-2-107.us-west-2.compute.internal",
            "private_ip": "10.0.2.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03d71b4de43d599c5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0baca2eae08818c87",
            "tags": {
              "Name": "proxy2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f3f34e403103841"
            ]
          },
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.ssh-allowed",
            "aws_subnet.private_subnet2",
            "tls_private_key.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bac6fc47ad07c5f5",
            "arn": "arn:aws:ec2:us-west-2:174871937336:instance/i-0a18f7d75e98f1b28",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a18f7d75e98f1b28",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06051f536fe95ebbe",
            "private_dns": "ip-10-0-11-82.us-west-2.compute.internal",
            "private_ip": "10.0.11.82",
            "public_ip": "34.221.178.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0391127b3fdf28273",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba5dbee8d88084d8",
            "tags": {
              "Name": "web1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f3f34e403103841"
            ]
          },
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public_subnet1",
            "tls_private_key.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bac6fc47ad07c5f5",
            "arn": "arn:aws:ec2:us-west-2:174871937336:instance/i-00a382a452bf63f89",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a382a452bf63f89",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b393a44f09bbb9e0",
            "private_dns": "ip-10-0-12-33.us-west-2.compute.internal",
            "private_ip": "10.0.12.33",
            "public_ip": "34.215.92.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b30bb63f36f67d20",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07240d022208b2100",
            "tags": {
              "Name": "web2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05f3f34e403103841"
            ]
          },
          "dependencies": [
            "aws_key_pair.keys",
            "aws_security_group.ssh-allowed",
            "aws_subnet.public_subnet2",
            "tls_private_key.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "iti_igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09d962d84b9150b66",
            "owner_id": "174871937336",
            "tags": {
              "Name": "prod-igw"
            },
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08792fb1bdec06f77",
            "owner_id": "174871937336",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Local Route Table for Isolated Private Subnet"
            },
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-087d185c20138158e",
            "owner_id": "174871937336",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d962d84b9150b66",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_internet_gateway.iti_igw",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtass1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6fef6a3216665be",
            "route_table_id": "rtb-087d185c20138158e",
            "subnet_id": "subnet-0ba5dbee8d88084d8"
          },
          "dependencies": [
            "aws_internet_gateway.iti_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtass2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be0e714a9a0ae06b",
            "route_table_id": "rtb-087d185c20138158e",
            "subnet_id": "subnet-07240d022208b2100"
          },
          "dependencies": [
            "aws_internet_gateway.iti_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet2",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpv",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad56ec64f4417a72",
            "route_table_id": "rtb-08792fb1bdec06f77",
            "subnet_id": "subnet-07fc83db438187b7e"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet1",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtpv1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0deb14ce1aec4feee",
            "route_table_id": "rtb-08792fb1bdec06f77",
            "subnet_id": "subnet-0baca2eae08818c87"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet2",
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:security-group/sg-05f3f34e403103841",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-05f3f34e403103841",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200405191433997000000001",
            "name_prefix": null,
            "owner_id": "174871937336",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:subnet/subnet-07fc83db438187b7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-07fc83db438187b7e",
            "map_public_ip_on_launch": false,
            "owner_id": "174871937336",
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:subnet/subnet-0baca2eae08818c87",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0baca2eae08818c87",
            "map_public_ip_on_launch": false,
            "owner_id": "174871937336",
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:subnet/subnet-0ba5dbee8d88084d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0ba5dbee8d88084d8",
            "map_public_ip_on_launch": true,
            "owner_id": "174871937336",
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:subnet/subnet-07240d022208b2100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-07240d022208b2100",
            "map_public_ip_on_launch": true,
            "owner_id": "174871937336",
            "vpc_id": "vpc-0b0d68552df90bb5f"
          },
          "dependencies": [
            "aws_vpc.terra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:174871937336:vpc/vpc-0b0d68552df90bb5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c42a1f0e8fc7589e",
            "default_route_table_id": "rtb-03a5f7633540e6216",
            "default_security_group_id": "sg-09a73937a23d54e59",
            "dhcp_options_id": "dopt-c9cf56b1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b0d68552df90bb5f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03a5f7633540e6216",
            "owner_id": "174871937336",
            "tags": {
              "Name": "Cloud_Vpc"
            }
          }
        }
      ]
    }
  ]
}